[gd_scene load_steps=4 format=3 uid="uid://ca0tqqg420vog"]

[ext_resource type="Script" path="res://Scripts/UI/Popups/in_game_menu.gd" id="1_vcfuv"]
[ext_resource type="PackedScene" uid="uid://bdnq17l0bvtig" path="res://Scenes/UI/Popups/AudioSettingsPopup.tscn" id="2_swej2"]
[ext_resource type="PackedScene" uid="uid://dviof3mjcqf3t" path="res://Scenes/UI/Popups/DisplayOptionsPopup.tscn" id="3_snbay"]

[node name="InGameMenu" type="PopupPanel"]
title = "Options"
initial_position = 2
size = Vector2i(135, 249)
visible = true
script = ExtResource("1_vcfuv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 131.0
offset_bottom = 245.0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Map" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Map"

[node name="Inventory" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="Audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Audio options"

[node name="Display" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Display options"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to title"

[node name="DisplayOptionsPopup" parent="." instance=ExtResource("3_snbay")]
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 131.0
offset_bottom = 245.0

[node name="AudioSettingsPopup" parent="." instance=ExtResource("2_swej2")]
visible = false
offset_right = 131.0
offset_bottom = 245.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="popup_hide" from="." to="." method="_on_close"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/Display" to="." method="_on_display_pressed"]
